--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactapp",
-  "homepage": "https://github.com/OladapoAdu/react-login-page.git",
+  "homepage": "https://OladapoAdu.github.io/react-login-page.git",
   "private": true,
   "version": "0.0.0",
   "type": "module",
